--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+install streamlit
+install streamlit_folium
+install pandas
+
+
 import streamlit as st
 import folium
 from streamlit_folium import folium_static
